2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b104

	* Updated frame layout so TT/BB (top/bottom) images are repeated
	  instead of stretched (left/right images already do this).
	  Also omit TTL/TTR/BBL/BBR/LLT/LLB/RRT/RRB cells if size is zero.

	* Set unused cells in wooden/notebook frames to zero.

	* Added new Golden frame.  Contributed by stormfrog.

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b103

	* Cascade of highlight-rebuild: to be safe, don't cascade if
	  parent album needs to be upgraded to current album_version.

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b102

	* Bugfix: removed extra ?> in albums.php.

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b101

	* Bugfix: a bit too much of login.php was omitted when email
	  feature is off (-b94).. moved the closing } up a few lines.

2004-03-04  Michael Schultheiss <schultmc@debian.org> 1.4.3-cvs-b100
                                                                                
        * util.php: escape the + in the validate_email regexp update 
          from b99 

2004-03-04  Michael Schultheiss <schultmc@debian.org> 1.4.3-cvs-b99

	* util.php: update validate_email regexp to allow + in e-mail
	  addresses

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b98

	* Cascade rebuilding of highlight up to parent album if this
	  album is the highlight for its parent.

2004-03-04 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b97

	* Change: More replacing of $GALLERY_BASEDIR.
		  Note: Now NO include() or require() needs this anymore.

2004-03-04 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b96

	* Change: Created new layout Block adminAlbumCommands.

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b95

	* Added new Wooden frame.  Contributed by stormfrog.

2004-03-04 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b94

	* Change: More replacing of $GALLERY_BASEDIR

	* Change: Removed warnings in GeekLog classes and add_comment.php
