@@ -181,7 +181,7 @@ function appendNestedAlbums($level, $permission, $albumName, $albumString, $albu
     $numPhotos = $myAlbum->numPhotos(1);
 
     for ($i=1; $i <= $numPhotos; $i++) {
-        $myName = $myAlbum->isAlbumName($i);
+        $myName = $myAlbum->getAlbumName($i);
         if ($myName) {
             $nestedAlbum = new Album();
             $nestedAlbum->load($myName);
