@@ -114,7 +114,7 @@ function find_albums(&$results, $album="") {
 
 		$count = $album->numPhotos(1);
 		for ($j = 1; $j <= $count; $j++) {
-			$name = $album->isAlbumName($j);
+			$name = $album->getAlbumName($j);
 			if ($name && $albumDB->getAlbumByName($name)) {
 				find_albums($results, $albumDB->getAlbumByName($name));
 			}
