@@ -534,12 +534,12 @@ if (($gallery->album->getPollType() == "rank") && canVote())
                                 $nv_pairs[$key]["name"].
                                 ":</td>\n";
 			$index=$gallery->album->getIndexByVotingId($id);
-			$albumName=$gallery->album->isAlbumName($index);
+			$albumName=$gallery->album->getAlbumName($index);
 			if ($albumName) {
                         	print "<td><a href=\n".
 					makeAlbumUrl($albumName). ">\n";
 			       	$myAlbum = new Album();
-			       	$myAlbum->load($gallery->album->isAlbumName($index));
+			       	$myAlbum->load($gallery->album->getAlbumName($index));
 			       	print sprintf(_("Album: %s"), $myAlbum->fields['title']);
 			       	print  "</a></td></tr>\n";
 			} else {
@@ -691,7 +691,7 @@ if ($numPhotos) {
 			$gallery->html_wrap['borderColor'] = $bordercolor;
 			$gallery->html_wrap['borderWidth'] = $borderwidth;
 			$gallery->html_wrap['pixelImage'] = getImagePath('pixel_trans.gif');
-			if ($gallery->album->isAlbumName($i)) {
+			if ($gallery->album->getAlbumName($i)) {
 				$scaleTo = 0; //$gallery->album->fields["thumb_size"];
 				$album = $gallery->album->getNestedAlbum($i);
 				list($iWidth, $iHeight) = $album->getHighlightDimensions($scaleTo);
@@ -721,8 +721,8 @@ if ($numPhotos) {
 					$gallery->html_wrap['imageHref'];
 			       	/*end backwards compatibility*/
 				includeHtmlWrap('inline_moviethumb.frame');
-			} elseif ($gallery->album->isAlbumName($i)) {
-				$myAlbumName = $gallery->album->isAlbumName($i);
+			} elseif ($gallery->album->getAlbumName($i)) {
+				$myAlbumName = $gallery->album->getAlbumName($i);
 				$myAlbum = new Album();
 				$myAlbum->load($myAlbumName);
 
@@ -802,7 +802,7 @@ if ($numPhotos) {
 		    echo('<tr>');
 		}
 		while ($j <= $cols && $i <= $numPhotos) {
-	                $myAlbumName = $gallery->album->isAlbumName($i);
+	                $myAlbumName = $gallery->album->getAlbumName($i);
 			if ($myAlbumName) {
 				$myAlbum = new Album;
 				$myAlbum->load($myAlbumName);
@@ -811,7 +811,7 @@ if ($numPhotos) {
 				$myAlbum = NULL;
 			}
                         
-			if ($gallery->album->isAlbumName($i)) {
+			if ($gallery->album->getAlbumName($i)) {
 			    $iWidth = $gallery->album->fields['thumb_size'];
 			} else {
 			    list($iWidth, $iHeight) = $gallery->album->getThumbDimensions($i);
@@ -887,7 +887,7 @@ if ($numPhotos) {
 			if ($showAdminForm) {
 				if ($gallery->album->isMovie($id)) {
 					$label = _("Movie");
-				} elseif ($gallery->album->isAlbumName($i)) {
+				} elseif ($gallery->album->getAlbumName($i)) {
 					$label = _("Album");
 				} else {
 					$label = _("Photo");
@@ -901,13 +901,13 @@ if ($numPhotos) {
 			}
 			if ($gallery->album->getItemOwnerModify() && 
 			    $gallery->album->isItemOwner($gallery->user->getUid(), $i) && 
-			    !$gallery->album->isAlbumName($i) && 
+			    !$gallery->album->getAlbumName($i) &&
 			    !$gallery->user->canChangeTextOfAlbum($gallery->album)) {
 				showChoice("Edit Text", "edit_caption.php", array("index" => $i));
 			}
 			if ($gallery->album->getItemOwnerModify() && 
 			    $gallery->album->isItemOwner($gallery->user->getUid(), $i) && 
-			    !$gallery->album->isAlbumName($i) && 
+			    !$gallery->album->getAlbumName($i) &&
 			    !$gallery->album->isMovie($id) &&
 			    !$gallery->user->canWriteToAlbum($gallery->album)) {
 				showChoice("Edit Thumbnail", "edit_thumb.php", array("index" => $i));
@@ -915,7 +915,7 @@ if ($numPhotos) {
 			}
 			if ($gallery->album->getItemOwnerDelete() && 
 			    $gallery->album->isItemOwner($gallery->user->getUid(), $i) && 
-			    !$gallery->album->isAlbumName($i) &&
+			    !$gallery->album->getAlbumName($i) &&
 			    !$gallery->user->canDeleteFromAlbum($gallery->album)) {
 				showChoice("Delete $label", "delete_photo.php", array("id" => $id));
 			}
@@ -944,19 +944,19 @@ if ($numPhotos) {
 				}
 			}
 			if ($gallery->user->canWriteToAlbum($gallery->album) && $showAdminForm) {
-				if (!$gallery->album->isMovie($id) && !$gallery->album->isAlbumName($i)) {
+				if (!$gallery->album->isMovie($id) && !$gallery->album->getAlbumName($i)) {
 					showChoice(_("Edit Thumbnail"), "edit_thumb.php", array("index" => $i));
 					showChoice(_("Rotate/Flip") ." $label", "rotate_photo.php", array("index" => $i));
 				}
 				if (!$gallery->album->isMovie($id)) {
 					 /* Show Highlight Album/Photo only when this i a photo, or Album has a highlight */
 					$nestedAlbum=$gallery->album->getNestedAlbum($i);
-					if (! $gallery->album->isAlbumName($i) || $nestedAlbum->hasHighlight()) {
+					if (! $gallery->album->getAlbumName($i) || $nestedAlbum->hasHighlight()) {
 						showChoice(_('Highlight') . " $label", 'do_command.php', array('cmd' => 'highlight', 'index' => $i));
 					}
 				}
-				if ($gallery->album->isAlbumName($i)) {
-				        $myAlbumName = $gallery->album->isAlbumName($i);
+				if ($gallery->album->getAlbumName($i)) {
+				        $myAlbumName = $gallery->album->getAlbumName($i);
 
 					showChoice(_("Reset Counter"), "do_command.php",
 						array("cmd" => "reset-album-clicks",
@@ -965,7 +965,7 @@ if ($numPhotos) {
 				}
 				showChoice(_("Move ") . $label, "move_photo.php", array("index" => $i, 'reorder' => 0));
 				showChoice(_("Reorder ") . $label, "move_photo.php", array("index" => $i, 'reorder' => 1));
-				if (!$gallery->album->isAlbumName($i)) {
+				if (!$gallery->album->getAlbumName($i)) {
 					showChoice(_("Copy ") . $label, "copy_photo.php", array("index" => $i));
 				}
 			}
@@ -979,7 +979,7 @@ if ($numPhotos) {
 				}
 			}
 			if ($gallery->user->canDeleteFromAlbum($gallery->album) && $showAdminForm) {
-				if($gallery->album->isAlbumName($i)) { 
+				if($gallery->album->getAlbumName($i)) {
 					if($gallery->user->canDeleteAlbum($myAlbum)) {
 						showChoice(_("Delete") . " $label", "delete_photo.php",
 							array("id" => $myAlbum->fields["name"],
@@ -990,13 +990,13 @@ if ($numPhotos) {
 						   array("id" => $id));
 				}
 			}
-			if($gallery->album->isAlbumName($i)) { 
+			if($gallery->album->getAlbumName($i)) {
 			    if ($gallery->user->isAdmin() || $gallery->user->isOwnerOfAlbum($myAlbum) && $showAdminForm) {
 				showChoice(_("Permissions"), "album_permissions.php",
 					   array("set_albumName" => $myAlbum->fields["name"]));
 			    }
 			}
-                       if ($gallery->user->isAdmin() && !$gallery->album->isAlbumName($i)) {
+                       if ($gallery->user->isAdmin() && !$gallery->album->getAlbumName($i)) {
                                showChoice(_("Change Owner"), "photo_owner.php", array("id" => $id));
                        }
 
